--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "php": "^7.2 || ^7.3",
     "zendframework/zend-modulemanager": "^2.8",
     "zendframework/zend-servicemanager": "^2.7.8 || ^3.3",
+    "zendframework/zend-mvc": "^2.7.10 || ^3.0.1",
     "zendframework/zend-filter": "^2.9",
     "zendframework/zend-validator": "*",
     "zendframework/zend-stdlib": "^3.2",
